--- a/Pear/Controllers/Onboarding/Get Started Flow/DoDont Input/GetStartedDoDontViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/DoDont Input/GetStartedDoDontViewController.storyboard
@@ -29,41 +29,27 @@
                                     <action selector="backButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="2EO-c4-xFi"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sN1-7f-pBc">
-                                <rect key="frame" x="278" y="41.5" width="77" height="37"/>
-                                <state key="normal" image="onboarding-next-button"/>
-                                <connections>
-                                    <action selector="nextButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="6u7-sS-FYl"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share some hints" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XlG-fB-jrv">
-                                <rect key="frame" x="30" y="90" width="315" height="27.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write dos/dont's" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XlG-fB-jrv">
+                                <rect key="frame" x="30" y="104" width="315" height="27.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Should we bring up The Bachelor?  Ask them about their family? Talk to them about food? Help us out!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fT3-Yw-8Vy">
-                                <rect key="frame" x="40" y="125.5" width="295" height="57.5"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-do-dont" translatesAutoresizingMaskIntoConstraints="NO" id="Ycg-vo-mO5">
+                                <rect key="frame" x="157.5" y="36" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="6Md-Ep-JZC"/>
+                                    <constraint firstAttribute="width" constant="60" id="8Yc-bq-nVV"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Should we ask about their family? Talk about food? Help us out!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fT3-Yw-8Vy">
+                                <rect key="frame" x="40" y="139.5" width="295" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleAspectFit" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Db5-Hg-hFx">
-                                <rect key="frame" x="67.5" y="193" width="240" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="4Be-nd-OF7"/>
-                                    <constraint firstAttribute="width" constant="240" id="hWV-yB-Do3"/>
-                                </constraints>
-                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Check out some samples">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="sampleButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="aTQ-p1-5kH"/>
-                                </connections>
-                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5hg-ug-CTH">
-                                <rect key="frame" x="0.0" y="243" width="375" height="424"/>
+                                <rect key="frame" x="0.0" y="186" width="375" height="403"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gbW-Sp-2JO">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -86,35 +72,42 @@
                                     <constraint firstAttribute="trailing" secondItem="gbW-Sp-2JO" secondAttribute="trailing" id="gN0-YR-PHv"/>
                                 </constraints>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgd-1Y-rYX">
+                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="gHw-iQ-5eC"/>
+                                </constraints>
+                                <state key="normal" title="Next"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Db5-Hg-hFx" firstAttribute="top" secondItem="fT3-Yw-8Vy" secondAttribute="bottom" constant="10" id="1E2-lV-HEV"/>
                             <constraint firstItem="XlG-fB-jrv" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="1Qv-IL-fko"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="fT3-Yw-8Vy" secondAttribute="trailing" constant="40" id="3cS-Oy-lL6"/>
                             <constraint firstItem="fT3-Yw-8Vy" firstAttribute="top" secondItem="XlG-fB-jrv" secondAttribute="bottom" constant="8" id="3kw-KR-mJt"/>
                             <constraint firstItem="7dd-td-X1n" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="20" id="6wi-Sh-0ur"/>
-                            <constraint firstItem="G71-ex-rp4" firstAttribute="bottom" secondItem="5hg-ug-CTH" secondAttribute="bottom" id="7V6-d0-mdB"/>
-                            <constraint firstItem="sN1-7f-pBc" firstAttribute="centerY" secondItem="7dd-td-X1n" secondAttribute="centerY" id="8sN-WR-mgL"/>
-                            <constraint firstItem="Db5-Hg-hFx" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="DEk-aS-Kw1"/>
+                            <constraint firstItem="tgd-1Y-rYX" firstAttribute="top" secondItem="5hg-ug-CTH" secondAttribute="bottom" constant="8" id="99b-PR-dTi"/>
                             <constraint firstItem="XlG-fB-jrv" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="30" id="ESg-9b-atr"/>
+                            <constraint firstItem="G71-ex-rp4" firstAttribute="bottom" secondItem="tgd-1Y-rYX" secondAttribute="bottom" constant="20" id="Fg9-Ne-cqW"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="5hg-ug-CTH" secondAttribute="trailing" id="JQm-KZ-SVh"/>
                             <constraint firstItem="fT3-Yw-8Vy" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="OWa-Vd-htz"/>
-                            <constraint firstItem="XlG-fB-jrv" firstAttribute="top" secondItem="7dd-td-X1n" secondAttribute="bottom" constant="10" id="OjA-eV-YAA"/>
                             <constraint firstItem="7dd-td-X1n" firstAttribute="top" secondItem="G71-ex-rp4" secondAttribute="top" constant="20" id="RVO-t1-Jk8"/>
-                            <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="sN1-7f-pBc" secondAttribute="trailing" constant="20" id="XrT-Ua-JZp"/>
+                            <constraint firstItem="Ycg-vo-mO5" firstAttribute="top" secondItem="G71-ex-rp4" secondAttribute="top" constant="16" id="Sbm-AJ-k8d"/>
+                            <constraint firstItem="tgd-1Y-rYX" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="20" id="Squ-DN-aeh"/>
+                            <constraint firstItem="Ycg-vo-mO5" firstAttribute="centerX" secondItem="G71-ex-rp4" secondAttribute="centerX" id="UDJ-oI-ftM"/>
+                            <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="tgd-1Y-rYX" secondAttribute="trailing" constant="20" id="VzL-N2-Rgy"/>
+                            <constraint firstItem="5hg-ug-CTH" firstAttribute="top" secondItem="fT3-Yw-8Vy" secondAttribute="bottom" constant="8" id="XXq-5W-kW1"/>
                             <constraint firstItem="5hg-ug-CTH" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" id="bQV-8R-KIB"/>
                             <constraint firstItem="G71-ex-rp4" firstAttribute="trailing" secondItem="XlG-fB-jrv" secondAttribute="trailing" constant="30" id="eiI-F9-XNn"/>
                             <constraint firstItem="fT3-Yw-8Vy" firstAttribute="leading" secondItem="G71-ex-rp4" secondAttribute="leading" constant="40" id="ib6-4g-et1"/>
-                            <constraint firstItem="5hg-ug-CTH" firstAttribute="top" secondItem="Db5-Hg-hFx" secondAttribute="bottom" constant="10" id="r6c-fE-FCd"/>
+                            <constraint firstItem="XlG-fB-jrv" firstAttribute="top" secondItem="Ycg-vo-mO5" secondAttribute="bottom" constant="8" id="r7h-04-ytZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="G71-ex-rp4"/>
                     </view>
                     <connections>
-                        <outlet property="samplesButton" destination="Db5-Hg-hFx" id="ZwA-o0-c8F"/>
-                        <outlet property="samplesButtonWidthConstraint" destination="hWV-yB-Do3" id="H8J-cC-XbH"/>
+                        <outlet property="nextButtonBottomConstraint" destination="Fg9-Ne-cqW" id="WbN-mV-xPR"/>
                         <outlet property="scrollView" destination="5hg-ug-CTH" id="X6D-V6-OeM"/>
-                        <outlet property="scrollViewBottomConstraint" destination="7V6-d0-mdB" id="xjz-ku-JbE"/>
                         <outlet property="stackView" destination="gbW-Sp-2JO" id="d2D-DN-W0B"/>
                         <outlet property="subtextLabel" destination="fT3-Yw-8Vy" id="ZkM-B4-hZ8"/>
                     </connections>
@@ -126,6 +119,6 @@
     </scenes>
     <resources>
         <image name="onboarding-back-button" width="96" height="96"/>
-        <image name="onboarding-next-button" width="77" height="37"/>
+        <image name="onboarding-icon-do-dont" width="50" height="48"/>
     </resources>
 </document>
